4.0 updates